// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Divider Testing Checkbox type Horizontal 1`] = `
<div
  className="h-0.5 w-undefined bg-grey-shd6"
  style={
    Object {
      "backgroundColor": "",
    }
  }
/>
`;

exports[`Testing Divider Testing Divider type Vertical 1`] = `
<div
  className="w-0.5 h-undefined bg-grey-shd6"
  style={
    Object {
      "backgroundColor": "",
    }
  }
/>
`;

exports[`Testing Divider Testing Divider with no props 1`] = `null`;
